Removing dependency to commons IO and adding it to test scope instead.